--- a/app/src/main/res/layout/home_act.xml
+++ b/app/src/main/res/layout/home_act.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cl_home"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
-    <FrameLayout
-        android:id="@+id/contentFrame"
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/ns_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</LinearLayout>
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <FrameLayout
+                android:id="@+id/bannerFrame"
+                style="@style/match_wrap"
+                android:layout_alignParentTop="true"
+                />
+            <FrameLayout
+                android:id="@+id/iconFrame"
+                style="@style/match_wrap"
+                android:layout_below="@id/bannerFrame"
+                android:layout_marginTop="10dp"
+                />
+        </RelativeLayout>
+    </android.support.v4.widget.NestedScrollView>
+</android.support.design.widget.CoordinatorLayout>
