--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="gray_theme">#e9e9e9</color>
 
     <color name="red">#ff0000</color>
+    <color name="white">#ffffff</color>
+
 </resources>
