--- a/app/src/main/res/menu/bottombar_menu.xml
+++ b/app/src/main/res/menu/bottombar_menu.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
         android:id="@+id/bb_menu_recents"
         android:icon="@drawable/ic_recents"
-        android:title="Recents" />
+        android:title="首页" />
     <item
         android:id="@+id/bb_menu_favorites"
         android:icon="@drawable/ic_favorites"
-        android:title="Favorites" />
+        android:title="我要装修" />
     <item
         android:id="@+id/bb_menu_nearby"
         android:icon="@drawable/ic_nearby"
-        android:title="Nearby" />
+        android:title="商城" />
     <item
         android:id="@+id/bb_menu_friends"
         android:icon="@drawable/ic_friends"
-        android:title="Friends" />
+        android:title="学装修" />
     <item
-        android:id="@+id/bb_menu_food"
-        android:icon="@drawable/ic_restaurants"
-        android:title="Food" />
+        android:id="@+id/bb_menu_mine"
+        android:icon="@drawable/ic_friends"
+        android:title="我的" />
 </menu>
