--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,7 +16,8 @@
     <dimen name="padding_setting_layout_small">12dp</dimen>
     <dimen name="margin_setting_image">12dp</dimen>
     <dimen name="margin_setting_department">4dp</dimen>
-    <dimen name="height_explore_divider">1dp</dimen>
+    <dimen name="height_explore_divider_1">1dp</dimen>
+    <dimen name="height_explore_divider_5">5dp</dimen>
     <dimen name="margin_login_user_name">6dp</dimen>
     <dimen name="padding_login_user_name">20dp</dimen>
     <dimen name="margin_item_explore">6dp</dimen>
