--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,80 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="gray_theme">#e9e9e9</color>
-
-    <color name="red">#ff0000</color>
+    <color name="app_layout_bg_gray_color">#4cf4f4f4</color>
+    <color name="base_bg_color">#f6f6f6</color>
+    <color name="base_color_text_gray">#999999</color>
     <color name="white">#ffffff</color>
+    <color name="white_ff">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="black_50">#7F000000</color>
+    <color name="select_line_green">#33cc00</color>
+    <color name="gray">#bcbcbc</color>
+    <color name="gray_21">#21292b</color>
+    <color name="select_bg">#505050</color>
+    <color name="but_default">#CC39B54A</color>
+    <color name="but_seclect">#FF39B54A</color>
+    <color name="gray_ee">#eeeeee</color>
+    <color name="gray_theme">#e9e9e9</color>
+    <color name="yellow_special">#f89c39</color>
+    <color name="gray_a6">#a6a6a6</color>
+    <color name="gray_43">#434343</color>
+    <color name="gray_37">#373737</color>
+
+    <!-- tabhost -->
+    <color name="red">#ff0000</color>
+    <color name="red_dc2525">#DC2525</color>
+    <color name="red_fe8378">#fe8378</color>
+    <color name="gray_tab_view">#C8C8C8</color>
+    <!-- tabhost end -->
+
+    <!-- 首页 -->
+    <color name="gray_88">#888888</color>
+    <color name="gray_ff">#ff7531</color>
+    <color name="gray_f8">#F8F8F8</color>
+    <!-- 首页 end -->
+
+    <!-- 购物车-->
+    <color name="bule_57">#578eff</color>
+    <color name="bule_57_80">#cc578eff</color>
+    <!-- 购物车 end -->
+
+    <!-- 我的 -->
+    <color name="red_f7">#f74325</color>
+    <color name="red_eb">#eb6877</color>
+    <color name="red_f7_80">#ccf74325</color>
+    <color name="gray_33">#333333</color>
+    <color name="gray_ce">#cecece</color>
+    <color name="gray_9f">#9F9F9F</color>
+    <color name="gray_03">#033333</color>
+    <!-- 我的 end -->
+
+    <color name="blue_6d">#6d74ff</color>
+    <color name="blue_6b">#6b79ff</color>
+    <color name="red_e1">#E1472D</color>
+    <color name="yellow_ff">#ff843a</color>
+    <color name="yellow_ff_80">#ccff843a</color>
+    <color name="yellow_b0">#b07518</color>
+    <color name="gray_66">#666666</color>
+    <color name="gray_39">#393939</color>
+    <color name="gray_e8">#E8E8E8</color>
+    <color name="gray_f9">#F9F9F9</color>
+    <color name="gray_d4">#D4D4D4</color>
+    <color name="gray_f2">#F2F2F6</color>
+
+    <color name="red_f76139">#f76139</color>
+    <!--     <color name="light_blue">@android:color/holo_blue_light</color> -->
+    <color name="navpage">#FFE1E8EB</color>
+    <color name="blue">#ffccddff</color>
+    <color name="grey">#58616d</color>
+    <color name="darkgrey">#ff404040</color>
+    <color name="toasterro">#9fd524</color>
+    <color name="lightgrey">#ff888888</color>
+    <color name="semitransparent">#80000000</color>
+    <color name="lightransparent">#a0000000</color>
+    <color name="transparent">#00000000</color>
+
+    <color name="mediacontroller_bg_pressed">#ff53c1bd</color>
+    <color name="mediacontroller_bg">#99000000</color>
 
 </resources>
